# bootsandcats

./: .gitignore  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FLYWAY_MIGRATION_README.md  GRADLE-MIGRATION-STATUS.md  INDEX.md  JWT_DECISION_GUIDE.md  JWT_REVISION_COMPLETE.md  NATIVE_JWT_FILTER_IMPLEMENTATION_SUMMARY.md  NATIVE_JWT_FILTER_REVISION_SUMMARY.md  PLAN_FEDERATION.md  QUICKSTART.md  README-GRADLE-MIGRATION.md  README.md  SETUP.md  SLOP_DETECTOR_SETUP.md  TEST_ENHANCEMENT_PLAN.md  UPGRADE_SUMMARY.md  build.gradle.kts  catalog-info.yaml  docker-compose.yml  gradle.properties  mkdocs.yml  otel-collector-config.yaml  owasp-suppressions.xml  pom.xml  settings.gradle.kts  spotbugs-exclude.xml
.github/: copilot-instructions-platform-tooling.md  copilot-instructions.md
.github/workflows/: build.yml  ci.yml  docker.yml  flyway-migrations.yml.example  generate-clients.yml  lint.yml  load-test.yml  security.yml  smoke-test.yml
canary-app/: Dockerfile  build.gradle.kts  pom.xml
clients/: .gitignore  README.md
clients/config/: go-profile.yaml  go.yaml  python-profile.yaml  python.yaml  rust-profile.yaml  rust.yaml  typescript-profile.yaml  typescript.yaml
clients/go/: README.md  client.go  go.mod  models.go
clients/python/: README.md  pyproject.toml  setup.py
clients/python/examples/: basic_usage.py
clients/python/src/bootsandcats_oauth2_client/: __init__.py  api_client.py  models.py  tracing.py
clients/python/tests/: __init__.py  test_tracing.py
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: basic.rs  with_tracing.rs
clients/rust/src/: api.rs  configuration.rs  error.rs  lib.rs  models.rs  tracing.rs
clients/scripts/: download-specs.sh  generate-clients.sh
clients/specs/: .gitignore
clients/templates/: README.md
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
docs/: AZURE_EC_JWK_SETUP.md  CHAT_APP_OAUTH2_TROUBLESHOOTING.md  CHAT_CLIENT_SETUP.md  CLAIM_TO_HEADERS_TECHNICAL_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  JWT_CLAIM_REFACTOR_PLAN.md  MAINTENANCE.md  NATIVE_ENVOY_JWT_FILTER_ANALYSIS.md  OAUTH2_FIX_SUMMARY.md  OAUTH2_SECRETS_FIX.md  OAUTH2_SIDECAR_SECRET_ISSUE.md  QUICK_START_EC_JWK.md  SECURE_SUBDOMAIN_OAUTH2.md  TROUBLESHOOTING_EC_JWK.md  ci.md  configuration.md  getting-started.md  index.md  requirements.txt  security.md
docs/api/: actuator-endpoints.md  client-onboarding.md  oauth2-endpoints.md  oidc-endpoints.md  openapi.md
docs/architecture/: data-flow.md  federation.md  overview.md  security.md
docs/blog/: ai-workflow-failure-analysis.md
docs/deployment/: OAUTH2_ENVOY_DEPLOYMENT.md  aws.md  azure-setup.md  azure.md  gcp.md  keystore-setup.md  overview.md  smoke-test-results.md  validation-complete.md
docs/javascripts/: mermaid-init.js
docs/observability/: OAUTH2_SLOS.md  dashboards.md  logging.md  metrics.md  overview.md  tracing.md
docs/operations/: canary-app.md  incident-response.md  profile-ui.md  slos.md
e2e-tests/: README.md  build.gradle.kts
gatling/: build.gradle.kts
githooks/: pre-commit
github-review-service/: Dockerfile  README.md  pyproject.toml  worker.py
github-review-service/app/: analysis.py  config.py  github_client.py  main.py  models.py  tasks.py
github-review-service/app/static/: index.html
github-review-service/tests/: test_api.py
infrastructure/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
infrastructure/k8s/: README.md  STRUCTURE.md  deployment.yaml  envoy-oauth2-sds-configmap.yaml  envoyfilter-chat-jwt-to-headers.yaml  envoyfilter-chat-oauth2-exchange.yaml  envoyfilter-github-review-jwt-authn-native-poc.yaml  envoyfilter-github-review-jwt-to-headers.yaml  envoyfilter-github-review-oauth2-exchange.yaml  envoyfilter-profile-jwt-to-headers.yaml  envoyfilter-profile-oauth2-exchange.yaml  flyway-migrations-configmap.yaml  github-review-service-deployment.yaml  kustomization.yaml  oauth2-server-deployment.yaml  postgres.yaml  profile-oauth2-lua-configmap.yaml  profile-service-deployment.yaml  profile-ui-deployment.yaml  redis-auth.yaml  redis.yaml  requestauthentication-chat.yaml  requestauthentication-github-review.yaml  requestauthentication-profile.yaml  secret-provider-class-chat.yaml  secret-provider-class-github-review.yaml  virtualservices.yaml  (+6 more)
k8s/: README.md  canary-deployment.yaml  cnpg-operator.yaml  deployment.yaml  flyway-migrations-configmap.yaml  hpa.yaml  istio-authz-policy.yaml  kustomization.yaml  pdb.yaml  postgres.yaml  profile-ui-deployment.yaml  redis-auth.yaml  redis.yaml  secret-provider-class.yaml  virtualservices.yaml  vpa.yaml
mcp-oauth2-admin/: .env.example  .eslintrc.json  .gitignore  QUICKSTART.md  README.md  package-lock.json  package.json
oauth2-http-client/: build.gradle.kts
oauth2-server/: .dockerignore.flyway  Dockerfile  Dockerfile.flyway  FLYWAY_CONTAINER.md  FLYWAY_INIT_CONTAINER_SETUP.md  FLYWAY_INIT_CONTAINER_VS_JOB.md  FLYWAY_LOCAL_TESTING.md  FLYWAY_MIGRATION_IMPLEMENTATION.md  FLYWAY_QUICKSTART.md  FLYWAY_VALIDATION_SUMMARY.md  build-flyway-container.sh
profile-ui/: Dockerfile  build.gradle.kts  package-lock.json  package.json  tailwind.config.js
profile-ui-lite/: Dockerfile  build.gradle.kts
scripts/: README.md  add-chat-client.sh  add-oauth2-wrapper.sh  add-profile-client.sh  add-secure-subdomain-client.sh  add-test-client.sh  azure-ec-jwk-manager.ps1  azure-ec-jwk-manager.sh  compare-secure-subdomain-secrets.py  complete-azure-setup.sh  diagnose-jwt-validation.sh  find-unreferenced-k8s-yaml.py  fix-jwt-validation.sh  generate-ec-jwk.sh  gh-actions-summary.sh  nuke-and-pave-profile-service.sh  oauth2-smoke-test.sh  pre-commit-checks.sh  setup-azure-github.sh  setup-chat-client-secrets.sh  setup-mongodb-secrets.sh  setup-now.sh  setup-security-agency-secrets.sh  setup-slop-detector-secrets.sh  smoke-test.sh  test-chat-flow.py  test-flyway-migrations.sh  validate-chat-oauth2-setup.sh  validate-flyway-setup.sh  validate-setup.sh
server-dao/: build.gradle.kts
server-logic/: build.gradle.kts
server-model/: build.gradle.kts
server-ui/: build.gradle.kts
(+498 files in other folders)
