[project]
name = "github-review-service"
version = "0.1.0"
description = "FastAPI microservice that summarizes a candidate's GitHub profile using OpenAI"
authors = [{ name = "bootsandcats", email = "devnull@example.com" }]
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.0",
  "redis[hiredis]>=5.0.0",
  "rq>=1.15.1",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "python-dotenv>=1.0.1",
  "orjson>=3.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "respx>=0.21.0",
  "freezegun>=1.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app/**", "pyproject.toml", "README.md", "Dockerfile", "worker.py", ".env"]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-q"
