[package]
name = "bootsandcats-oauth2-client"
version = "1.0.0"
edition = "2021"
authors = ["Bootsandcats Team <support@example.com>"]
description = "Rust client for OAuth2 Authorization Server API with OpenTelemetry support"
license = "MIT"
repository = "https://github.com/ianlintner/bootsandcats"
documentation = "https://docs.rs/bootsandcats-oauth2-client"
keywords = ["oauth2", "oidc", "openid-connect", "authorization", "authentication"]
categories = ["authentication", "web-programming"]
readme = "README.md"
rust-version = "1.70"

[lib]
name = "bootsandcats_oauth2_client"
path = "src/lib.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL handling
url = "2.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
log = "0.4"

# OpenTelemetry (optional)
opentelemetry = { version = "0.21", optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.14", features = ["http-proto", "reqwest-client"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.5"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
tracing = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "with_tracing"
path = "examples/with_tracing.rs"
required-features = ["tracing"]
